# cfgd

./: .anodize.yaml  .anodizer.yaml  .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.agent.release  Dockerfile.csi  Dockerfile.csi.release  Dockerfile.operator  Dockerfile.operator.release  Dockerfile.server  LICENSE  LICENSE-APACHE  README.md  SECURITY.md  Taskfile.yml  cfgd.spec  cliff.toml  coverage.json  install.sh
crates/cfgd/: CHANGELOG.md  Cargo.toml  build.rs
crates/cfgd-core/: CHANGELOG.md  Cargo.toml
crates/cfgd-core/src/: effective.rs  exit.rs  http.rs  lib.rs  oci.rs  retry.rs  server_client.rs  test_helpers.rs  tests.rs  upgrade.rs
crates/cfgd-core/src/compliance/: mod.rs  tests.rs
crates/cfgd-core/src/composition/: constraints.rs  engine.rs  layers.rs  merge.rs  mod.rs  packages.rs  permissions.rs  policy.rs  record.rs  tests.rs
crates/cfgd-core/src/config/: ai.rs  comments.rs  compliance.rs  daemon.rs  enum_de.rs  image_lock.rs  mod.rs  modeline.rs  module.rs  origin.rs  parse.rs  platform.rs  profile_spec.rs  resolve.rs  root.rs  security.rs  source.rs  source_lock.rs  sync_secrets.rs  tests.rs  theme.rs
crates/cfgd-core/src/daemon/: checkin.rs  daemon_config.rs  drift.rs  git.rs  health_ipc.rs  mod.rs  reconcile.rs  runner.rs  sync.rs  tests.rs
crates/cfgd-core/src/errors/: mod.rs
crates/cfgd-core/src/generate/: mod.rs  schema.rs  session.rs  skill_model.rs  validate.rs
crates/cfgd-core/src/modules/: git.rs  loader.rs  lockfile.rs  mod.rs  registry.rs  resolve.rs  tests.rs
crates/cfgd-core/src/oci/: archive.rs  auth.rs  build.rs  mod.rs  pack.rs  pull.rs  push.rs  sign.rs  tests.rs  transport.rs
crates/cfgd-core/src/output/: component.rs  diff.rs  doc.rs  mod.rs  printer.rs  process.rs  progress.rs  prompts.rs  raw.rs  render_doc.rs  role.rs  section_guard.rs  spinner.rs  status_builder.rs  structured.rs  syntax.rs  test_capture.rs  test_support.rs  tests.rs  theme.rs  verbosity.rs
crates/cfgd-core/src/output_v2/: doc.rs  mod.rs  printer.rs  process.rs  prompts.rs  raw.rs  render_doc.rs  section_guard.rs  spinner.rs  status_builder.rs  test_capture.rs  tests.rs  theme.rs  verbosity.rs
crates/cfgd-core/src/platform/: mod.rs  tests.rs
crates/cfgd-core/src/providers/: mod.rs
crates/cfgd-core/src/reconciler/: apply.rs  env.rs  env_engine.rs  env_files.rs  file_action.rs  files.rs  format.rs  mod.rs  modules.rs  packages.rs  plan.rs  restore.rs  rollback.rs  scripts.rs  scripts_apply.rs  secrets.rs  system.rs  tests.rs  types.rs  verify.rs
crates/cfgd-core/src/schema/: mod.rs  snapshot.rs
crates/cfgd-core/src/server_client/: mod.rs  tests.rs
crates/cfgd-core/src/sources/: lockfile.rs  mod.rs  tests.rs
crates/cfgd-core/src/state/: applies.rs  backups.rs  compliance.rs  decisions.rs  drift.rs  journal.rs  managed.rs  mod.rs  modules.rs  pending_config.rs  sources.rs  tests.rs  types.rs
crates/cfgd-core/src/upgrade/: check.rs  dedup.rs  mod.rs  tests.rs
crates/cfgd-core/src/util/: abort.rs  apply_lock.rs  constants.rs  encryption.rs  env_session.rs  file_io.rs  fs_perms.rs  git.rs  hashing.rs  mod.rs  paths.rs  process.rs  reconcile.rs  strings.rs  time.rs  yaml_merge.rs
crates/cfgd-core/tests/: docs_examples_validate.rs  schema_golden.rs  schema_prose_parity.rs  skill_examples_ground_truth.rs  skill_golden.rs  skill_provider_io.rs  update_dedup.rs
crates/cfgd-core/tests/fixtures/: exemplar_nvim_after.yaml
crates/cfgd-crd/: CHANGELOG.md  Cargo.toml
crates/cfgd-crd/src/: lib.rs  tests.rs
crates/cfgd-csi/: CHANGELOG.md  Cargo.toml  build.rs
crates/cfgd-csi/proto/: csi.proto
crates/cfgd-csi/src/: app.rs  cache.rs  errors.rs  identity.rs  lib.rs  main.rs  metrics.rs  node.rs
crates/cfgd-csi/src/node/: mod.rs  tests.rs
crates/cfgd-csi/tests/: grpc_integration.rs
crates/cfgd-operator/: CHANGELOG.md  Cargo.toml
crates/cfgd-operator/chart/cfgd-operator/: Chart.yaml  values.yaml
crates/cfgd-operator/src/: app.rs  args.rs  env.rs  errors.rs  gen_crds.rs  health.rs  leader.rs  lib.rs  main.rs  metrics.rs  runtime.rs  test_helpers.rs  webhook.rs
crates/cfgd-operator/src/controllers/: cluster_config_policy.rs  config_policy.rs  drift_alert.rs  machine_config.rs  mod.rs  module.rs  test_fixtures.rs  test_kube_harness.rs  tests.rs  tests_cluster_config_policy.rs  tests_config_policy.rs  tests_drift_alert.rs  tests_machine_config.rs  tests_module.rs
crates/cfgd-operator/src/crds/: mod.rs  tests.rs
crates/cfgd-operator/src/gateway/: api.rs  db.rs  errors.rs  fleet.rs  mod.rs  rate_limit.rs  test_state.rs  web.rs
crates/cfgd-operator/src/webhook/: mod.rs  test_router.rs  tests.rs  tests_kube_router.rs  tests_router.rs  tests_server.rs
crates/cfgd-operator/tests/: rbac_parity.rs
crates/cfgd-server/: Cargo.toml
crates/cfgd-server/src/: errors.rs  main.rs
crates/cfgd-server/src/api/: mod.rs
crates/cfgd-server/src/db/: mod.rs
crates/cfgd-server/src/fleet/: mod.rs
crates/cfgd-server/src/web/: mod.rs
crates/cfgd/src/: lib.rs  main.rs
crates/cfgd/tests/: apply_exit_code.rs  apply_signal_abort.rs  apply_snapshots.rs  apply_state_writes.rs  apply_v2_snapshots.rs  brontes_mcp_tools.rs  checkin_snapshots.rs  checkin_v2_snapshots.rs  cli_error_rendering.rs  cli_integration.rs  compliance_diff_snapshots.rs  compliance_diff_v2_snapshots.rs  compliance_snapshots.rs  compliance_v2_snapshots.rs  config_edit_snapshots.rs  config_edit_v2_snapshots.rs  config_get_snapshots.rs  config_get_v2_snapshots.rs  config_set_snapshots.rs  config_set_v2_snapshots.rs  config_show_snapshots.rs  config_show_v2_snapshots.rs  config_unset_snapshots.rs  config_unset_v2_snapshots.rs  daemon_snapshots.rs  daemon_v2_snapshots.rs  decide_snapshots.rs  decide_v2_snapshots.rs  diff_snapshots.rs  diff_v2_snapshots.rs  doctor_snapshots.rs  doctor_v2_snapshots.rs  enroll_snapshots.rs  enroll_v2_snapshots.rs  explain_snapshots.rs  explain_v2_snapshots.rs  generate_prompt_inertness.rs  generate_snapshots.rs  generate_v2_snapshots.rs  init_snapshots.rs  (+80 more)
(+1011 files in other folders)
