[workspace]
resolver = "2"
members = [
    "crates/cfgd-core",
    "crates/cfgd",
    "crates/cfgd-operator",
    "crates/cfgd-csi",
]

[workspace.package]
version = "0.2.2"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/tj-smith47/cfgd"
homepage = "https://github.com/tj-smith47/cfgd"
authors = ["TJ Smith"]
