[workspace]
resolver = "2"
members = [
    "crates/cfgd-crd",
    "crates/cfgd-core",
    "crates/cfgd",
    "crates/cfgd-operator",
    "crates/cfgd-csi",
]

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tj-smith47/cfgd"
homepage = "https://github.com/tj-smith47/cfgd"
authors = ["TJ Smith"]

# File:line backtraces survive; ~50 integration-test binaries shrink enough
# to fit ubuntu-latest's ~14 GB free disk. No coverage or test-integrity loss.
[profile.dev]
debug = "line-tables-only"
