# cfgd-core ships its own version line (not workspace.package.version) so
# anodizer can bump it independently of the cfgd binary, cfgd-operator, and
# cfgd-csi. Each of those three crates pins this version via workspace
# dependency declarations; anodizer's version_sync (enabled in
# .anodizer.yaml) updates those pins automatically on bump.
[package]
name = "cfgd-core"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core library for cfgd — shared types, providers, reconciler, state"
keywords = ["config", "management", "gitops", "reconciliation", "declarative"]
categories = ["config", "command-line-utilities"]

# Editor-config JSON schema generator. Emits schemas/*.schema.json from the
# config document types so the published SchemaStore schemas are generated,
# not hand-written. Mirrors cfgd-operator's `cfgd-gen-crds` bin (gen_crds.rs).
[[bin]]
name = "cfgd-gen-schemas"
path = "src/bin/gen_schemas.rs"

# Cross-platform fake `cosign` for the hermetic signing tests. A single
# host-target artifact replaces the prior Unix-only `/bin/sh` shim so Windows,
# macOS, and Linux run identical sign/attest/verify coverage. `CosignTestShim`
# resolves it relative to the running test binary; per-invocation behavior
# (exit code, stderr, keygen, argv logging) flows in via env vars, never the
# crate's published API. `test`/`doc` off keep it out of the test harness and
# rustdoc. `required-features = ["test-helpers"]` keeps this dev-only binary out
# of a default `cargo install cfgd-core`; the Taskfile test targets always pass
# `--features cfgd-core/test-helpers`, so the cosign tests still find it on disk.
[[bin]]
name = "fake-cosign"
path = "src/bin/fake_cosign.rs"
required-features = ["test-helpers"]
test = false
doc = false

[dependencies]
# CRD spec types + schemars-derived schemas for the unified KIND_REGISTRY.
# Optional + gated behind the default-on `crd` feature so the CSI node plugin
# (which never touches Kubernetes resources) can build cfgd-core with
# `default-features = false` and keep the heavy kube/k8s-openapi stack out of
# its binary.
cfgd-crd = { path = "../cfgd-crd", version = "0.5.0", optional = true }

# Serialization / Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "1.0"
# JSON Schema generation for the published editor-config schemas
# (schemas/*.schema.json). Derived on the config document types so the
# schemas are generated from the Rust structs and can never silently drift.
schemars = "1.2"

# Output & Theming
console = "0.16"
indicatif = { version = "0.18", features = ["tokio"] }
syntect = "5"
unicode-width = "0.2"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling
thiserror = "2"

# Database (state store)
rusqlite = { version = "0.32", features = ["bundled"] }

# Filesystem watching (daemon)
notify = "8"
notify-rust = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Secret memory zeroization
secrecy = "0.10"

# Hashing
sha2 = "0.11"

# Diffing
similar = "3"

# Paths
directories = "6"

# Hostname detection
hostname = "0.4"

# Interactive prompts
inquire = "0.9"

# HTTP client (daemon webhooks)
ureq = "3"

# Git
git2 = "0.21"

# Templating (output format)
tera = "1"

# Semver (multi-source version pinning)
semver = "1"

# Glob pattern matching (source security)
glob = "0.3"

# Temp files (upgrade)
tempfile = "3"

# Tar/gzip extraction (upgrade)
flate2 = "1"
tar = "0.4"

libc = "0.2"

# Zip extraction (upgrade on Windows)
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(not(windows))'.dependencies]
# Force vendored OpenSSL for git2/libgit2 on Linux and macOS; avoids needing
# a system OpenSSL install while keeping SSH and HTTPS support in git2.
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
# Safe wrappers over libc for signals, process control, file locking
nix = { version = "0.31", features = ["signal", "fs", "process", "user"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_EventLog",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
] }
windows-service = "0.8"

[features]
default = ["crd"]
# Compile the cluster-side CRD half of the KIND_REGISTRY (depends on cfgd-crd →
# kube/k8s-openapi). On by default; CSI opts out via default-features = false.
crd = ["dep:cfgd-crd"]
test-helpers = ["dep:pretty_assertions"]

[dependencies.pretty_assertions]
version = "1"
optional = true

[dev-dependencies]
tempfile = "3"
serial_test = "3"
mockito = "1"
tracing-test = "0.2"

