[package]
name = "cfgd-crd"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "cfgd Custom Resource Definition spec types, schemas, and cross-field validation"
keywords = ["kubernetes", "crd", "config", "schema"]
categories = ["config"]

[lib]
name = "cfgd_crd"
path = "src/lib.rs"

[dependencies]
kube = { version = "0.98", features = ["derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
thiserror = "2"

[dev-dependencies]
serde_yaml = "0.9"
