[package]
name = "cfgd-csi"
description = "CSI Node plugin for cfgd module injection into Kubernetes pods"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "cfgd_csi"
path = "src/lib.rs"

[[bin]]
name = "cfgd-csi"
path = "src/main.rs"

[dependencies]
cfgd-core = { path = "../cfgd-core" }
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus-client = "0.22"
sha2 = "0.10"
thiserror = "2"
tokio-stream = { version = "0.1", features = ["net"] }
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
hostname = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["mount", "fs"] }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile = "3"
tower = "0.5"
