[package]
name = "cfgd-csi"
description = "CSI Node plugin for cfgd module injection into Kubernetes pods"
version = "0.5.0"
keywords = ["kubernetes", "csi", "config", "storage"]
categories = ["config"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
name = "cfgd_csi"
path = "src/lib.rs"

[[bin]]
name = "cfgd-csi"
path = "src/main.rs"

[dependencies]
# default-features = false drops the `crd` feature: the CSI node plugin never
# reads CRD schemas, so it keeps the kube/k8s-openapi stack (pulled by cfgd-crd)
# out of its binary. See cfgd-core's KIND_REGISTRY docs.
cfgd-core = { path = "../cfgd-core", version = "0.6.0", default-features = false }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus-client = "0.25"
sha2 = "0.11"
thiserror = "2"
tokio-stream = { version = "0.1", features = ["net"] }
hyper-util = { version = "0.1", features = ["tokio"] }
axum = "0.8"
hostname = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["mount", "fs"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
cfgd-core = { path = "../cfgd-core", version = "0.6.0", default-features = false, features = ["test-helpers"] }
tempfile = "3"
tower = "0.5"
# Serial tests for env-var-mutating tests (CSI_ENDPOINT, CACHE_DIR, METRICS_PORT, etc.)
serial_test = "3"

