[package]
name = "cfgd-operator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "cfgd Kubernetes operator — CRD-based node configuration"
keywords = ["kubernetes", "operator", "config", "crd"]
categories = ["config"]

[lib]
name = "cfgd_operator"
path = "src/lib.rs"

[[bin]]
name = "cfgd-operator"
path = "src/main.rs"

[[bin]]
name = "cfgd-gen-crds"
path = "src/gen_crds.rs"

[dependencies]
serde_yaml = "0.9"
cfgd-core = { path = "../cfgd-core", version = "0.2.2" }
kube = { version = "0.98", features = ["runtime", "derive", "client", "admission"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json-patch = "3"
jsonptr = "0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
axum = "0.8"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
semver = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
subtle = "2"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
prometheus-client = "0.22"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.32"

[dev-dependencies]
cfgd-core = { path = "../cfgd-core", version = "0.2.2", features = ["test-helpers"] }
serial_test = "3"
