[package]
name = "cfgd-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "cfgd control plane — fleet management web UI and API"
license = "MIT"
repository = "https://github.com/tj-smith47/cfgd"
homepage = "https://github.com/tj-smith47/cfgd"
keywords = ["config", "management", "fleet", "dashboard"]
categories = ["config", "web-programming"]

[[bin]]
name = "cfgd-server"
path = "src/main.rs"

[dependencies]
cfgd-core = { path = "../cfgd-core" }
cfgd-operator = { path = "../cfgd-operator" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
sha2 = "0.10"
kube = { version = "0.98", features = ["client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"
